corpus/c/thread_safety/case-01/snapshots/gcc15_plus/dual_sink_structured/render.verbose.txt
error: [thread_safety] thread safety or atomic operation error @ src/main.c:7:5
help: ensure the type is trivially copyable for atomic operations or fix the thread_local linkage
raw : operand type ‘struct Blob *’ is incompatible with argument 1 of ‘__atomic_store_n’
| src/main.c:7:5
|     __atomic_store_n(&blob, blob, __ATOMIC_SEQ_CST);
|     ^
debug: rule_id=rule.family.thread_safety.message_terms
debug: matched_conditions=message_contains=__atomic_, phase=semantic
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output